--- a/houdini/api/templates/login.html
+++ b/houdini/api/templates/login.html
@@ -35,18 +35,18 @@
                                         <div class="pdd-horizon-15">
                                             <h2>Login</h2>
                                             <p class="mrg-btm-15 font-size-13">Please enter your user name and password to login</p>
-                                            <form>
+                                            <form action="/login/" method="POST">
                                                 <div class="form-group">
-                                                    <input type="text" class="form-control" placeholder="User name">
+                                                    <input type="text" name="username" class="form-control" placeholder="User name">
                                                 </div>
                                                 <div class="form-group">
-                                                    <input type="password" class="form-control" placeholder="Password">
+                                                    <input type="password" name="password" class="form-control" placeholder="Password">
                                                 </div>
                                                 <!-- <div class="checkbox font-size-12">
                                                     <input id="agreement" name="agreement" type="checkbox">
                                                     <label for="agreement">Keep Me Signed In</label>
                                                 </div> -->
-                                                <button class="btn btn-info">Login</button>
+                                                <button type="submit" class="btn btn-info">Login</button>
                                             </form>
                                         </div>
                                     </div>
