--- a/houdini/api/templates/home.html
+++ b/houdini/api/templates/home.html
@@ -1,6 +1,4 @@
-{% extends "base.html" %}
-{% block title %} Data Collection - Houdini{% endblock %} 
-{% block content %}
+{% extends "base.html" %} {% block title %} Data Collection - Houdini{% endblock %} {% block content %}
 <div class="pace  pace-inactive">
     <div class="pace-progress" data-progress-text="100%" data-progress="99" style="transform: translate3d(100%, 0px, 0px);">
         <div class="pace-progress-inner"></div>
@@ -136,12 +134,11 @@
 
                         </div>
                         <div class="col-lg-9">
-
                             <div class="card">
                                 <div class="card-heading border bottom">
                                     <h4 class="card-title">Data</h4>
                                 </div>
-                                <div class="widget-feed">
+                                <div class="widget-feed ml-4 mr-4">
                                     <ul class="list-info overflow-y-auto relative">
                                         <li class="border bottom mrg-btm-10">
                                             <div class="pdd-vertical-10">
@@ -180,7 +177,7 @@
                                                 </ul>
                                             </div>
                                         </li>
-                                        <li class="border bottom mrg-btm-10">
+                                        <li class=" bottom mrg-btm-10">
                                             <div class="pdd-vertical-10">
                                                 <span class="thumb-img bg-primary">
                                                     <span class="text-white">
@@ -216,8 +213,19 @@
 
                                     </ul>
                                 </div>
-                            </div>
 
+                                <div class="card-footer dataTables_wrapper">
+                                    <div class="dataTables_info" id="dt-opt_info" role="status" aria-live="polite">Showing 1 to 10 of 12 entries</div>
+                                    <div class="dataTables_paginate paging_simple_numbers" id="dt-opt_paginate">
+                                        <a class="paginate_button previous disabled" aria-controls="dt-opt" data-dt-idx="0" tabindex="0" id="dt-opt_previous">Previous</a>
+                                        <!-- <span>
+                                            <a class="paginate_button current" aria-controls="dt-opt" data-dt-idx="1" tabindex="0">1</a>
+                                            <a class="paginate_button" aria-controls="dt-opt" data-dt-idx="2" tabindex="0">2</a>
+                                        </span> -->
+                                        <a class="paginate_button next" aria-controls="dt-opt" data-dt-idx="3" tabindex="0" id="dt-opt_next">Next</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
 
