--- a/houdini/api/templates/home.html
+++ b/houdini/api/templates/home.html
@@ -34,13 +34,11 @@
                             <a href="" class="dropdown-toggle" data-toggle="dropdown">
                                 <img class="profile-img img-fluid" src="{{ url_for('static', filename='img/user.png') }}" alt="">
                                 <div class="user-info">
-                                    <span class="name pdd-right-5">Admin</span>
+                                    <span class="name pdd-right-5">{{ username }}</span>
                                     <i class="ti-angle-down font-size-10"></i>
                                 </div>
                             </a>
                         </li>
-
-
                     </ul>
                 </div>
             </div>
@@ -55,7 +53,7 @@
                             <div class="card">
                                 <div class="card-block">
                                     <div class="inline-block">
-                                        <h1 class="no-mrg-vertical">168.2K</h1>
+                                        <h1 class="no-mrg-vertical">{{ data['count'] }}</h1>
                                         <p>Data Collected</p>
                                     </div>
                                     <!-- <div class="pdd-top-25 inline-block pull-right">
@@ -71,9 +69,7 @@
 
                             <div class="card">
                                 <div class="card-heading border bottom">
-                                    <h4 class="card-title">Purchase Actions
-                                        <a class="add-purchase-action pull-right" href="">+</a>
-                                    </h4>
+                                    <h4 class="card-title">Purchase Actions</h4>
                                 </div>
                                 <div class="card-body">
                                     <div class="inline-block">
@@ -137,33 +133,32 @@
                             <div class="card">
                                 <div class="card-heading border bottom">
                                     <h4 class="card-title">Data</h4>
+
+
                                 </div>
                                 <div class="widget-feed ml-4 mr-4">
                                     <ul class="list-info overflow-y-auto relative">
-                                        <li class="border bottom mrg-btm-10">
+
+                                        {% for record in records %}
+
+                                        <li class="{{'border bottom mrg-btm-10' if not loop.last}}">
                                             <div class="pdd-vertical-10">
                                                 <span class="thumb-img bg-primary">
                                                     <span class="text-white">
                                                         <img src="{{ url_for('static', filename='img/twitter-icon.png') }}" class="source-icon" />
                                                     </span>
                                                 </span>
+
                                                 <div class="info">
-                                                    <a href="" class="text-link">
-                                                        <span class="title">
-                                                            <b class="font-size-15">Twitter for android</b>
-                                                        </span>
-                                                    </a>
-                                                    <span class="sub-title">5 mins ago</span>
+                                                    <span class="title">
+                                                        <b class="font-size-15">{{ record['source'] }}</b>
+                                                    </span>
+                                                    <span class="sub-title">{{ record['created_at'] }}</span>
                                                 </div>
                                                 <div class="mrg-top-10">
-                                                    <p class="no-mrg-btm">Today marks 3 years of USA/Saudi war crimes against Yemen, the poorest
-                                                        nation in the Middle East, which has created the largest humanitarian
-                                                        crisis since WWii. 10,000+ civilians have been bombed to death including
-                                                        12 year-old #Ishraq. Millions are starving to death. #USAWarCrimes
-                                                        https://t.co/zSFuhr12nx
-                                                    </p>
+                                                    <p class="no-mrg-btm">{{ record['text'] }}</p>
                                                 </div>
-                                                <ul class="feed-action">
+                                                <!-- <ul class="feed-action">
                                                     <li>
                                                         <a class="btn" href="">
                                                             <span>Action 1</span>
@@ -174,10 +169,13 @@
                                                             <span>Action 2</span>
                                                         </a>
                                                     </li>
-                                                </ul>
+                                                </ul> -->
                                             </div>
                                         </li>
-                                        <li class=" bottom mrg-btm-10">
+
+                                        {% endfor %}
+
+                                        <!-- <li class=" bottom mrg-btm-10">
                                             <div class="pdd-vertical-10">
                                                 <span class="thumb-img bg-primary">
                                                     <span class="text-white">
@@ -208,23 +206,29 @@
                                                     </li>
                                                 </ul>
                                             </div>
-                                        </li>
+                                        </li> -->
 
 
                                     </ul>
                                 </div>
 
                                 <div class="card-footer dataTables_wrapper">
-                                    <div class="dataTables_info" id="dt-opt_info" role="status" aria-live="polite">Showing 1 to 10 of 12 entries</div>
+                                    <div class="dataTables_info" id="dt-opt_info" role="status" aria-live="polite">Showing
+                                        <b>{{data.page - 9}}</b> to
+                                        <b>{{data.page}}</b> of
+                                        <b>{{(data.count+1)/10}}</b> pages
+                                        <b>| {{data.count+1}}</b> entries</div>
                                     <div class="dataTables_paginate paging_simple_numbers" id="dt-opt_paginate">
-                                        <a class="paginate_button previous disabled" aria-controls="dt-opt" data-dt-idx="0" tabindex="0" id="dt-opt_previous">Previous</a>
+                                        <a href="{{ url_for('home', page=data.page-20) }}" disabled="{{'disabled' if data.page<=10}}" class="paginate_button previous {{'disabled' if data.page<=10}}">Previous</a>
                                         <!-- <span>
                                             <a class="paginate_button current" aria-controls="dt-opt" data-dt-idx="1" tabindex="0">1</a>
                                             <a class="paginate_button" aria-controls="dt-opt" data-dt-idx="2" tabindex="0">2</a>
                                         </span> -->
-                                        <a class="paginate_button next" aria-controls="dt-opt" data-dt-idx="3" tabindex="0" id="dt-opt_next">Next</a>
+                                        <a href="{{ url_for('home', page=data.page) }}" disabled="{{'disabled' if data.count/10<data.page}}" class="paginate_button next {{'disabled' if data.count/10<data.page}}"
+                                            >Next</a>
                                     </div>
                                 </div>
+
                             </div>
                         </div>
                     </div>
